--- a/style.css
+++ b/style.css
@@ -194,9 +194,16 @@ a {
     color: #061815;
 }
 
-.header-area .is-sticky .main-menu li:hover .sub-menu {
+/* .header-area .is-sticky .main-menu li:hover .sub-menu {
     top: 90px;
-}
+} */
+
+
+/* #sticky-wrapper.is-sticky{
+    -webkit-animation: slideInDown 0.6s forwards;
+    animation: slideInDown 0.6s forwards;
+    box-shadow: 0 3px 16px -2px #ebe8e8;
+} */
 
 .main-menu li:hover .sub-menu {
     opacity: 1;
@@ -1289,5 +1296,20 @@ li {
     100% {
         -webkit-transform: translateX(-30px);
         transform: translateX(-30px);
+    }
+}
+
+@keyframes slideInDown {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(-2000px);
+        -ms-transform: translateY(-2000px);
+        transform: translateY(-2000px);
+    }
+    
+    100% {
+        -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+        transform: translateY(0);
     }
 }
