--- a/pages.css
+++ b/pages.css
@@ -1184,12 +1184,41 @@ li {
 
 /* fade effects */
 
-.animated {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
+
+.reveal{
+    /* position: relative; */
+    opacity: 0;
+  }
+  
+  .reveal.active {
+    opacity: 1;
+  }
+
+.active.fadeInUp {
+    animation: fadeInUp .5s ease-in;
     animation-fill-mode: both;
-}
+  }
+
+.active.fadeInLeft {
+    animation: fadeInLeft .5s ease-in;
+    animation-fill-mode: both;
+  }
+
+.active.fadeInDown {
+    animation: fadeInDown .5s ease-in;
+    animation-fill-mode: both;
+  }
+
+.active.fadeInRight {
+    animation: fadeInRight .5s ease-in;
+    animation-fill-mode: both;
+  }
+
+.active.slideInDown {
+    animation: slideInDown .5s ease-in;
+    animation-fill-mode: both;
+  }
+
 
 
 @keyframes fadeInUp {
