home page fade effect css changed

--- a/style.css
+++ b/style.css
@@ -1250,6 +1250,12 @@ li {
 
 /* fade effects */
 
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
 
 .reveal{
     /* position: relative; */
