--- a/style.css
+++ b/style.css
@@ -1430,6 +1430,281 @@ li {
 
 /*************** MEDIA QUERIES **************/
 
+@media screen and (max-width:768px) {
+
+
+    /* common css */
+
+
+    .hamburger, .cross, .menu{
+        display: block;
+      }
+
+    h1{
+        font-size: 34px;
+        line-height: 34px;
+    }
+    
+    h3 {
+        font-size: 28px;
+    }
+
+    .section-padding{
+        padding: 30px 0px;
+    }
+
+    p{
+        font-size: 14px;
+        line-height: normal;
+    }
+
+    /* header css */
+
+    .header-area, .header-top-area, .client-area{
+        display: none;
+    }
+
+    .header-info{
+        justify-content: center;
+    }
+
+    .header-info p{
+        font-size: 12px;
+    }
+
+    .contact-info a {
+        padding: 3px 10px;
+        font-size: 12px;
+    }
+
+    .social-icon{
+        text-align: center;
+    }
+
+    .mobile-header{
+        padding: 10px 0px;
+        display: block;
+    }
+
+    .mobile-menu-container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .mobile-logo a{
+        color: #fff;
+        font-weight: 500;
+        font-size: 18px;
+    }
+
+    
+    /* hero css */
+
+    .hero-area-content {
+        margin-top: 30px;
+        margin-bottom: 0;
+    }
+
+    .hero-area-content h1 {
+        margin-top: 15px;
+    }
+
+    .hero-area-content p {
+        padding-left: 0;
+        margin-top: 0;
+        padding-right: 0;
+        font-size: 14px;
+        line-height: 1.3;
+    }
+
+    .hero-area-content a {
+        font-size: 14px;
+    }
+
+    .slider-bg {
+        min-height: 300px;
+    }
+
+    .homepage-slides{
+        margin-bottom: 0 !important;
+    }
+
+    .homepage-slides .owl-dots {
+        margin: 0px;
+        right: 25px;
+    }
+
+    .homepage-slides .owl-dots button {
+        width: 10px;
+        height: 10px;
+        margin: 7px;
+    }
+
+    .section-title{
+        margin-bottom: 15px;
+    }
+
+    .section-title h2 {
+        font-size: 32px;
+        line-height: 37px;
+    }
+
+    .section-title a {
+        font-size: 34px;
+        line-height: 37px;
+    }
+
+    .section-title a:before {
+        display: none;
+    }
+
+    .service-content-wrap{
+        margin-top: 30px;
+    }
+  
+
+    .single-service-inner h5 a {
+        font-size: 18px;
+    }
+
+    .single-service-inner p {
+        font-size: 14px;
+        line-height: normal;
+        margin: 20px 0;
+        padding-right: 0;
+    }
+
+    .single-service-wrap{
+        max-width: max-content;
+    }
+
+    .single-service-inner .details-link {
+        width: 20px;
+        height: 20px;
+    }
+
+    .single-service-inner .details-link i {
+        font-size: 14px;
+    }
+
+    .section-title h6 {
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 12px;
+        padding: 5px 10px;
+        margin-bottom: 15px;
+    }
+
+    .service-content-wrap p {
+        font-size: 14px;
+        margin-top: 0;
+        line-height: normal;
+    }
+
+    .service-bg .more-service-btn {
+        padding: 5px;
+        font-size: 13px;
+    }
+
+    /* service section end */
+
+        /* counter section start */
+
+        .single-counter-box p.counter-number {
+            font-size: 24px;
+            line-height: normal;
+            font-weight: 500;
+            margin: 0;
+        }
+    
+        .single-counter-box h6 {
+            font-size: 16px;
+            line-height: normal;
+        }
+    
+        .counter-area .row{
+            gap: 20px;
+            justify-content: center;
+        }
+    
+        /* counter section end */
+
+    /* about section start */
+
+    .about-bg-one {
+        min-height: 650px;
+        max-width: calc(100% - 0px);
+    }
+
+    .about-content-wrap {
+        margin-top: 45px;
+    }
+
+    .about-content-wrap p {
+        font-size: 14px;
+        margin: 20px 0;
+    }
+
+    .about-bg-two {
+        min-height: 650px;
+        margin-top: 0;
+    }
+
+    /* about section end */
+
+    /* cta section start*/
+
+    .pt-150 {
+        padding-top: 60px;
+    }
+
+    .cta-area-inner p {
+        margin-top: 35px;
+    }
+
+    .explore-btn {
+        left: 100px;
+        bottom: -15px;
+    }
+        
+    /* cta section end*/
+
+    /* testimonial section start */
+
+    .testimonial-slide-inner {
+        width: auto;
+    }
+
+    .testimonial-slider-wrap {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    /* testimonial section end */
+
+    /* footer section start */
+
+    .footer-widget h5 {
+        display: none;
+    }
+
+    .footer-shape img{
+        width: 65%;
+    }
+
+    .founder-year-wrap span{
+        margin: 35px 0px;
+    }
+
+    .social-icon{
+        text-align: start;
+    }
+
+    /* footer section end */
+
+}
+
 @media screen and (max-width:450px) {
 
     /* common css */
