--- a/pages.css
+++ b/pages.css
@@ -1,5 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300;400&family=Syne:wght@400;500&display=swap');
 
+a[href^="tel"] {
+    color: inherit; /* Inherit text color of parent element. */
+    text-decoration: none; /* Remove underline. */
+    /* Additional css `propery: value;` pairs here */
+  }
+  
+  *[x-apple-data-detectors],  /* iOS */
+      .x-gmail-data-detectors,    /* Gmail */
+      .x-gmail-data-detectors *,
+      .aBn {
+          border-bottom: 0 !important;
+          cursor: default !important;
+          color: inherit !important;
+          text-decoration: none !important;
+          font-size: inherit !important;
+          font-family: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+      }
+  
+
 .preloader {
     position: fixed;
     left: 0px;
@@ -945,6 +966,8 @@ button, input, textarea, a:hover, a:focus, a:visited {
 
 .contact-form-wrapper input[type=submit] {
     margin-top: 30px;
+    background-color: #f08143;
+    font-weight: 600;
 }
 
 .contact-details-wrapper {
